--- a/PROJETO-SILVIO-TRIBUTO/index.html
+++ b/PROJETO-SILVIO-TRIBUTO/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tributo a Silvio Santos</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <div class="container">
-        <h1>Silvio Santos</h1>
+        <!--cabeçalho-->
+        <div class="cabecalho">
+            <h1 class="titulo-principal">Silvio Santos</h1>
+            <p class="paragrafo-principal">Um revolucionário apresentador brasileiro</p>
+            <!--imagem de destaque-->
+            <div class="img-destaque">
+                <img src="img/silvio-santos.jpg" alt="Silvio Santos">
+            </div>
+        </div>
+
     </div>
 </body>
+
 </html>
