--- a/PROJETO-SILVIO-TRIBUTO/index.html
+++ b/PROJETO-SILVIO-TRIBUTO/index.html
@@ -14,13 +14,17 @@
         <div class="cabecalho">
             <h1 class="titulo-principal">Silvio Santos</h1>
             <p class="paragrafo-principal">Um revolucionário apresentador brasileiro</p>
-            <!--imagem de destaque-->
-            <div class="img-destaque">
-                <img src="img/silvio-santos.jpg" alt="Silvio Santos">
-            </div>
         </div>
+
+        <!--imagem de destaque-->
+        <div class="img-destaque">
+        <figure>
+             <img src="img/silvio.jpg" alt="Silvio Santos sorrindo">
+             <figcaption>Silvio encanta todos com seu carisma</figcaption>
+              
+        </figure>
+    </div>
+    </div>
 
     </div>
 </body>
-
-</html>
