--- a/PROJETO-SILVIO-TRIBUTO/index.html
+++ b/PROJETO-SILVIO-TRIBUTO/index.html
@@ -74,6 +74,19 @@
             <li>Seu programa de auditório é o mais antigo do mundo</li>
         </ul>
     </div>
+    <!--Segunda citação-->
+    <div class="frase-container">
+        <blockquote>"Qual ser humano que vai progredir se ele não recebe um estímulo?"</blockquote>
+        <p>Silvio Santos</p>
+    </div>
+    
+    <!--Segunda imagem dédestaque-->
+          <div class="img-destaque">
+            <figure>
+                <img src="img/silvio2.jpg" alt="Silvio Santos no Palco">
+                <figcaption>Silvio Santos e seu auditório</figcaption>
+            </figure>
+        </div>
     </div>
 </body>
 
