--- a/PROJETO-SILVIO-TRIBUTO/index.html
+++ b/PROJETO-SILVIO-TRIBUTO/index.html
@@ -79,14 +79,21 @@
         <blockquote>"Qual ser humano que vai progredir se ele não recebe um estímulo?"</blockquote>
         <p>Silvio Santos</p>
     </div>
-    
+
     <!--Segunda imagem dédestaque-->
-          <div class="img-destaque">
-            <figure>
-                <img src="img/silvio2.jpg" alt="Silvio Santos no Palco">
-                <figcaption>Silvio Santos e seu auditório</figcaption>
-            </figure>
-        </div>
+    <div class="img-destaque">
+        <figure>
+            <img src="img/silvio2.jpg" alt="Silvio Santos no Palco">
+            <figcaption>Silvio Santos e seu auditório</figcaption>
+        </figure>
+    </div>
+    <!--Biogtrafia-->
+    <div class="biografia-container">
+        <h2>Biografia</h2>
+        <p>Você pode conhecer mais sobre o Silvio comprando sua biografia</p>
+        <a
+            href="https://www.amazon.com.br/Silvio-Santos-Biografia-Marcia-Batista/dp/8550302473?tag=goog0ef-20&smid=A1ZZFT5FULY4LN&ascsubtag=go_726685122_54292137521_242594579893_pla-396661836187_c_">aqui!</a
+            </div>
     </div>
 </body>
 
