--- a/PROJETO-SILVIO-TRIBUTO/index.html
+++ b/PROJETO-SILVIO-TRIBUTO/index.html
@@ -90,10 +90,9 @@
     <!--Biogtrafia-->
     <div class="biografia-container">
         <h2>Biografia</h2>
-        <p>Você pode conhecer mais sobre o Silvio comprando sua biografia</p>
-        <a
-            href="https://www.amazon.com.br/Silvio-Santos-Biografia-Marcia-Batista/dp/8550302473?tag=goog0ef-20&smid=A1ZZFT5FULY4LN&ascsubtag=go_726685122_54292137521_242594579893_pla-396661836187_c_">aqui!</a
-            </div>
+        <p>Você pode conhecer mais sobre o Silvio comprando sua biografia 
+            <a href="https://www.amazon.com.br/Silvio-Santos-Biografia-Marcia-Batista/dp/8550302473?tag=goog0ef-20&smid=A1ZZFT5FULY4LN&ascsubtag=go_726685122_54292137521_242594579893_pla-396661836187_c_">aqui!</a>
+  
     </div>
 </body>
 
