--- a/PROJETO 2/formulario-vendas.html
+++ b/PROJETO 2/formulario-vendas.html
@@ -10,10 +10,23 @@
     <div class="container">
         <div class="header">
             <h3>Cadastre seu veículo para vender muito mais rápido</h3>
+        </div>
+
             <div class="form-container">
-                
+                <div class="form-header">
+                    <p>Cadastro</p>
+                </div>
+                <div class="form-body">
+                    <h1 class="form-title">Venda facíl seu veículo</h1>
+                    <p>Descreva as características do seu veículo e marque todas os opicionais e características que ele possui</p>
+                    <form>
+                        <div class="box-input">
+
+                        </div>
+                    </form>
+                </div>
+
             </div>
         </div>
     </div>
 </body>
-</html>
