--- a/PROJETO 2/formulario-vendas.html
+++ b/PROJETO 2/formulario-vendas.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Veículos</title>
     <link rel="stylesheet" href="/CSS/styles.css">
 </head>
+
 <body>
     <div class="container">
         <div class="header">
             <h3>Cadastre seu veículo para vender muito mais rápido</h3>
         </div>
 
-            <div class="form-container">
-                <div class="form-header">
-                    <p>Cadastro</p>
-                </div>
-                <div class="form-body">
-                    <h1 class="form-title">Venda facíl seu veículo</h1>
-                    <p>Descreva as características do seu veículo e marque todas os opicionais e características que ele possui</p>
-                    <form>
-                        <div class="box-input">
-
-                        </div>
-                    </form>
-                </div>
-
+        <div class="form-container">
+            <div class="form-header">
+                <p>Cadastro</p>
             </div>
+            <div class="form-body">
+                <h1 class="form-title">Venda facíl seu veículo</h1>
+                <p>Descreva as características do seu veículo e marque todas os opicionais e características que ele
+                    possui</p>
+                <form>
+                    <div class="box-input">
+                        <label for="title">Título do anûncio:</label>
+                        <input type="text" name="title" id="title" class="block"
+                        placeholder="Defina um título para o seu veículo"
+                        minlength="1" maxlength="30">
+
+
+                    </div>
+                </form>
+            </div>
+
         </div>
+    </div>
     </div>
 </body>
