--- a/PROJETO 2/formulario-vendas.html
+++ b/PROJETO 2/formulario-vendas.html
@@ -24,10 +24,13 @@
                     possui</p>
                 <form>
                     <div class="box-input">
-                        <label for="title">Título do anûncio:</label>
+                        <label for="title">Título do anûncio: 
+                            <span class="required-field">*</span>
+                        </label>
                         <input type="text" name="title" id="title" class="block"
                         placeholder="Defina um título para o seu veículo"
-                        minlength="1" maxlength="30">
+                        minlength="1" maxlength="30" required>
+                        <input type="submit" class="btn-submit" value="Cadastrar">
 
 
                     </div>
