--- a/PROJETO 2/formulario-vendas.html
+++ b/PROJETO 2/formulario-vendas.html
@@ -24,16 +24,21 @@
                     possui</p>
                 <form>
                     <div class="box-input">
-                        <label for="title">Título do anûncio: 
+                        <label for="title">Título do anûncio:
                             <span class="required-field">*</span>
                         </label>
                         <input type="text" name="title" id="title" class="block"
-                        placeholder="Defina um título para o seu veículo"
-                        minlength="1" maxlength="30" required>
+                            placeholder="Defina um título para o seu veículo" minlength="1" maxlength="30" required>
                         <input type="submit" class="btn-submit" value="Cadastrar">
-
-
                     </div>
+
+                    <div class="box-input">
+                        <label for="price">Preço do veículo
+                            <span class="required-field">*</span>
+                        </label>
+                        <input type="number" name="price" id="price" class="block">
+                    </div>
+
                 </form>
             </div>
 
