--- a/PROJETO 2/formulario-vendas.html
+++ b/PROJETO 2/formulario-vendas.html
@@ -39,6 +39,20 @@
                         <input type="number" name="price" id="price" class="block">
                     </div>
 
+                    <div class="box-input">
+                        <label>Descrição:
+                            <span class="required-field">*</span>
+                        </label>
+                    <textarea 
+                        id="description" 
+                        name="description"
+                         class="block"
+                         cols="30" 
+                         rows="10" 
+                         required
+                         placeholder="Descreva seu veículo">
+                    </textarea>
+                    </div>
                 </form>
             </div>
 
