--- a/PROJETO 2/formulario-vendas.html
+++ b/PROJETO 2/formulario-vendas.html
@@ -53,6 +53,31 @@
                          placeholder="Descreva seu veículo">
                     </textarea>
                     </div>
+                    <div class="box-input">
+                        <label for="unique_owner">Único dono?
+                            <span class="required-field">*</span>
+                        </label> 
+                        <select id="unique_owner" name="unique_owner" required>
+                            <option value="">Selecione...</option>
+                            <option value="1">Sim</option>
+                            <option value="0">Não</option>
+                        </select>
+                    </div>
+                    <div class="box-input">
+                        <label for="brande">Marca:
+                            <span class="required-field">*</span>
+                        </label>
+                        <input type="number" name="brand" id="brand" class="block" placeholder="Digite a marca do seu veículo">
+                    </div>
+
+                    <div class="box-input">
+                        <label for="brande">Marca:
+                            <span class="required-field">*</span>
+                        </label>
+                        <input type="number" name="brand" id="brand" class="block" placeholder="Digite a marca do seu veículo">
+                    </div>
+                    
+                    <input type="submit" class="btn-submit" value="Cadastrar">
                 </form>
             </div>
 
