--- a/PROJETO 2/formulario-vendas.html
+++ b/PROJETO 2/formulario-vendas.html
@@ -43,20 +43,14 @@
                         <label>Descrição:
                             <span class="required-field">*</span>
                         </label>
-                    <textarea 
-                        id="description" 
-                        name="description"
-                         class="block"
-                         cols="30" 
-                         rows="10" 
-                         required
-                         placeholder="Descreva seu veículo">
+                        <textarea id="description" name="description" class="block" cols="30" rows="10" required
+                            placeholder="Descreva seu veículo">
                     </textarea>
                     </div>
                     <div class="box-input">
                         <label for="unique_owner">Único dono?
                             <span class="required-field">*</span>
-                        </label> 
+                        </label>
                         <select id="unique_owner" name="unique_owner" required>
                             <option value="">Selecione...</option>
                             <option value="1">Sim</option>
@@ -67,17 +61,42 @@
                         <label for="brande">Marca:
                             <span class="required-field">*</span>
                         </label>
-                        <input type="number" name="brand" id="brand" class="block" placeholder="Digite a marca do seu veículo">
+                        <input type="number" name="brand" id="brand" class="block"
+                            placeholder="Digite a marca do seu veículo">
                     </div>
 
                     <div class="box-input">
-                        <label for="brande">Marca:
+                        <label for="brand">
+                            Marca:
                             <span class="required-field">*</span>
                         </label>
-                        <input type="number" name="brand" id="brand" class="block" placeholder="Digite a marca do seu veículo">
+                        <input type="text" name="brand" id="brand" class="block"
+                            placeholder="Digite a marca do seu veículo" required>
+                    </div>
+                    <div class="box-input">
+                        <label for="model">
+                            Modelo:
+                            <span class="required-field">*</span>
+                        </label>
+                        <input type="text" name="model" id="model" class="block"
+                            placeholder="Digite o modelo do seu veículo" required>
+                    </div>
+                    <div class="box-input">
+                        <label for="mileage">
+                            Quilometragem:
+                            <span class="required-field">*</span>
+                        </label>
+                        <input type="number" name="mileage" id="mileage" class="block" required>
+                    </div>
+                    <div class="box-input">
+                        <label for="purchase_date">
+                            Data de compra do veículo:
+                            <span class="required-field">*</span>
+                        </label>
+                        <input type="date" name="purchase_date" id="purchase_date" class="block" required>
                     </div>
                     
-                    <input type="submit" class="btn-submit" value="Cadastrar">
+
                 </form>
             </div>
 
