--- a/PROJETO 3/HTML/index.html
+++ b/PROJETO 3/HTML/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,26 @@
     <link rel="stylesheet" type="text/css" href="/CSS/reset.css">
     <link rel="stylesheet" type="text/css" href="/CSS/styles.css">
     <link rel="stylesheet" type="text/css" href="">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
+
 <body>
-    
+    <div class="container">
+        <header>
+            <div class="banner">
+                <div class="box-container">
+                    <div class="box-background"></div>
+                    <div class="box-banner-title">
+                        <h1>Agência X</h1>
+                        <p>Desenvolvendo os seus sistemas</p>
+                    </div>
+                    <div class="company-info-container">
+                    </div>
+                </div>
+            </div>
+        </header>
+    </div>
 </body>
+
 </html>
