--- a/PROJETO 3/HTML/index.html
+++ b/PROJETO 3/HTML/index.html
@@ -23,6 +23,11 @@
                         <p>Desenvolvendo os seus sistemas</p>
                     </div>
                     <div class="company-info-container">
+                        <div class="company-info-background"></div>
+                        <div class="company-info-titlebox">
+                            <h2>Seja bem-vindo ao nosso site</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde a inventore adipisci, minima deleniti vitae excepturi obcaecati ducimus sed quaerat facilis molestias officiis, animi illum nulla, hic tenetur aliquam molestiae.</p>
+                        </div>
                     </div>
                 </div>
             </div>
