--- a/PROJETO 4/index.html
+++ b/PROJETO 4/index.html
@@ -1,12 +1,26 @@
-  <!DOCTYPE html>
-  <html lang="pt-br">
-    <head>
-        <meta charset="utf-8">
-        <title>Google</title>
-        <link rel="shortcut icon" href="/img/favicon.ico"/>
-        <!--CSS-->
-        <link rel="stylesheet" href="/css/style.css">
-    </head> 
-    <body>
-        <h1>teste</h1>
-    </body> 	
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+  <meta charset="utf-8">
+  <title>Google</title>
+  <link rel="shortcut icon" href="/img/favicon.ico" />
+  <!--Font Icon-->
+  <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+  <!--CSS-->
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+  <header>
+    <nav id="navbar">
+<ul>
+  <li><a href="#">Gmail</a></li>
+  <li><a href="#">Imagens</a></li>
+  <li>
+    <a href="#"><span class="lnr lnr-list"></span></a></li>
+  <li><a href="#">Fazer Login</a></li>
+</ul>
+    </nav>
+  </header>
+</body>
