--- a/PROJETO 4/index.html
+++ b/PROJETO 4/index.html
@@ -14,13 +14,14 @@
 <body>
   <header>
     <nav id="navbar">
-<ul>
-  <li><a href="#">Gmail</a></li>
-  <li><a href="#">Imagens</a></li>
-  <li>
-    <a href="#"><span class="lnr lnr-list"></span></a></li>
-  <li><a href="#">Fazer Login</a></li>
-</ul>
+      <ul class="nav-list" id="social-bar">
+        <li><a href="#">Gmail</a></li>
+        <li><a href="#">Imagens</a></li>
+        <li>
+          <a href="#"><span class="lnr lnr-list"></span></a>
+        </li>
+        <li><a href="#">Fazer Login</a></li>
+      </ul>
     </nav>
   </header>
 </body>
