--- a/PROJETO 4/index.html
+++ b/PROJETO 4/index.html
@@ -26,13 +26,13 @@
   </header>
   <!--A tag main é onde colocamos todo o conteúdo central do site, melhor explicando: o post do site fica no main, a barra de navegação fica no header e o rodapé no footer -->
   <main id="body">
-    <img src="/img/google_logo.png" alt="google logo">
+    <img src="/img/google_logo.png" id="google-logo" alt="google logo">
     <form action="">
       <div id="input-box">
         <input type="text" id="search-input" name="search">
-        <span class="lnr lnr-magnifier id=" search-icon"></span>
-        <span class="lnr lnr-keyboard id=" keyboard-icon"></span>
-        <span class="lnr lnr-mic id=" mic-icon"></span>
+        <span class="lnr lnr-magnifier" id="search-icon"></span>
+        <span class="lnr lnr-keyboard" id="keyboard-icon"></span>
+        <span class="lnr lnr-mic" id="mic-icon"></span>
       </div>
 
       <div>
