--- a/PROJETO 5/index.html
+++ b/PROJETO 5/index.html
@@ -1,52 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 maxmum-scale=1, user-scale-no">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contato</title>
-    <link rel="stylesheet" href="/PROJETO 5/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-
 <body>
     <div id="main-container">
-        <!--Informações de Endereço-->
         <div id="address-container">
             <div class="fade"></div>
-            <div id="adress-content"></div>
-            <h2><ion-icon name="navigate-outline"></ion-icon>Endereço</h2>
-            <p>Rua Das Flores, 133</p>
-
-            <h2><ion-icon name="call-outline"></ion-icon>Telefone</h2>
-            <p>(33)9999-9999</p>
-
-            <h2><ion-icon name="mail-outline"></ion-icon>Email</h2>
-            <p>juninhopedemesa@gmail.com</p>
-
+            <div id="address-content">
+                <h2><ion-icon name="navigate-outline"></ion-icon> Endereço</h2>
+                <p>Rua das Flores, 133</p>
+                <h2><ion-icon name="call-outline"></ion-icon> Telefone</h2>
+                <p>(48)9999-2020</p>
+                <h2><ion-icon name="mail-outline"></ion-icon> E-mail</h2>
+                <p>joaozinhopedemesa@gmail.com</p>
+            </div>
         </div>
-
-        <!--Formulário para contato-->
         <div id="form-container">
+            <h2>Nos mande uma mensagem!</h2>
             <form id="contact-form">
-                <div id="form-container">
-                    <h2>Nos mande uma mensagem!</h2>
-                    <form id="contact-form">
-                        <label for="name">Nome:</label>
-                        <input type="text" name="name" placeholder="Digite seu nome">
-        
-                        <label for="email">Email:</label>
-                        <input type="email" name="email" placeholder="Digite seu Email">
-        
-                        <label for="phone">Telefone:</label>
-                        <input type="msg" name="phone" placeholder="Digite seu Telefone">
-                        <textarea name="msg" placeholder="como podemos te ajudar>"></textarea>
-                        <input type="submit" value="enviar mensagem">
-                    </form>
-            </form>
+                <label for="name">Nome:</label>
+                <input type="text" name="name" placeholder="Digite seu nome">
 
+                <label for="email">Email:</label>
+                <input type="email" name="email" placeholder="Digite seu Email">
+
+                <label for="phone">Telefone:</label>
+                <input type="msg" name="phone" placeholder="Digite seu Telefone">
+                <textarea name="msg" placeholder="como podemos te ajudar>"></textarea>
+                <input type="submit" value="enviar mensagem">
+            </form>
         </div>
     </div>
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 </body>
-
 </html>
