--- a/PROJETO 5/index.html
+++ b/PROJETO 5/index.html
@@ -31,7 +31,7 @@
 
                 <label for="phone">Telefone:</label>
                 <input type="msg" name="phone" placeholder="Digite seu Telefone">
-                <textarea name="msg" placeholder="como podemos te ajudar>"></textarea>
+                <textarea name="msg" placeholder="como podemos te ajudar"></textarea>
                 <input type="submit" value="enviar mensagem">
             </form>
         </div>
